--- a/day07/30-ternary.html
+++ b/day07/30-ternary.html
@@ -11,10 +11,10 @@
     <input type="number" placeholder="maas miktarini giriniz" id="inpMaas">
     <button onclick="hesapla()">Hesapla</button>
     <br>
-    <input type="radio" name="durum" id="isciInp">
+    <input type="radio" name="durum" id="isciInp" value="calisan">
     <label for="isciInp">Calisan</label>
     <br>
-    <input type="radio" name="durum" id="emekliInp">
+    <input type="radio" name="durum" id="emekliInp" value="emekli">
     <label for="emekliInp">Emekli</label>
 
 
