--- a/day08/36-for-loop.html
+++ b/day08/36-for-loop.html
@@ -11,7 +11,13 @@
 
 
     <script>
-for(let i=)
+for(let i=1; i<=5;i++){
+    console.log("hello javascript")
+}
+
+for(let j=1; j<12; j++){
+    console.log(j)
+}
 
 
     </script>
