--- a/day09/40-do-while-loop.html
+++ b/day09/40-do-while-loop.html
@@ -27,8 +27,9 @@
             faktoriyel*=number;
          number--
         }while(number>1);
-        sonuc.innerHTML=`Girdiginiz sayinin faktoriyeli: ${faktoriyel}`
+      sonuc.innerHTML=`Girdiginiz sayinin faktoriyeli: ${faktoriyel}` 
+      //inputEl.value=faktoriyel
       }
     </script>
   </body>
-</html
+</html>
