--- a/day10/45-arrow-practice.html
+++ b/day10/45-arrow-practice.html
@@ -10,7 +10,7 @@
     <input type="number" placeholder="urun fiyati" id="inpFiyat">
     <input type="number" placeholder="kdv orani" id="inpKdv">
     <input type="number" placeholder="indirim Orani" id="inpOran">
-    <button onclick="hesapla()">Hesapla</button>
+    <button onclick="sonucuGoster()">Hesapla</button>
     <p id="snc"></p>
     
     <script src="./js/45-script.js"></script>
