--- a/day13/56-practice.html
+++ b/day13/56-practice.html
@@ -10,13 +10,30 @@
       //verilen arraydaki max sayi bulunuz
       let sayilar = [12, 56, 14, 67, 89, 123, 22];
 
-      let maxNumber = sayilar[0];
-      for (let i = 0; i < sayilar.length; i++) {
+      
+    /*   for (let i = 0; i < sayilar.length; i++) {
         if (maxNumber < sayilar[i]) {
           maxNumber = sayilar[i];
         }
       }
-      console.log(maxNumber);
+      console.log(maxNumber); */
+
+      const getMaxNumber = (arr) => {
+        if(!Array.isArray(arr) || arr.length<=0){
+            return;
+        }
+        let maxNumber = arr[0];
+        for (let i = 0; i < arr.length; i++) {
+        if (maxNumber < arr[i]) {
+          maxNumber = arr[i];
+        }
+      }
+      return maxNumber;
+      }
+
+      document.write(getMaxNumber(sayilar));
+      
+
     </script>
   </body>
 </html>
