--- a/day14/65-practice.html
+++ b/day14/65-practice.html
@@ -6,26 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    
-
-
     <script>
-const adlar = ["Ahmet", "Can","Mustafa","Ayşe","Elif"];
-const soyAdlar= ["Öztürk", "Yılmaz", "Arı", "Çalı", "Yazı"];
-
-const isimBirlestir = (names,surNames) => {
-  let birlestikArr=[];
-  for(let w in names){
-
-    birlestikArr.push(`${names[w]} ${surNames[w]}`)
-
-  }
-  return birlestikArr;
-}
-
-console.log(isimBirlestir(adlar,soyAdlar));
-
-
+const adlar = ["Ahmet", "Can","Mustafa","Ayşe","Elif","joe"];
+const soyAdlar= ["Öztürk", "Yılmaz", "Arı", "Çalı", "Yazı", "Tazi"];
+const isimBirlestir = (names,surnames) => { 
+    let birlesikArr=[];
+    for(let q in surnames){
+//birlesikArr.push(`${names[q]}  ${surnames[q]}`)
+birlesikArr[q]=`  ${surnames[q]}   ${names[q]}  `
+    }
+    return birlesikArr;
+ }
+console.log(isimBirlestir(adlar,soyAdlar))
     </script>
+    
 </body>
 </html>
