--- a/day18/86-dom-4.html
+++ b/day18/86-dom-4.html
@@ -12,6 +12,20 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document Object Model-4</title>
+        <style>
+            .red{
+                background-color: red;
+                color: chartreuse;
+            }
+            .blue{
+                background-color: blue;
+                color: chocolate;
+            }
+            .black{
+                background-color: black;
+                color: goldenrod;
+            }
+        </style>
       </head>
       <body>
         <p id="pEl">
@@ -25,7 +39,21 @@
         <button id="btn2">Remove</button>
         <button id="btn3">Toggle</button>
         <button id="btn4">Replace</button>
-        <script></script>
+        <script>
+            let pEl=document.getElementById("pEl");
+document.getElementById("btn1").addEventListener("click",()=>{
+    pEl.classList.add("red")
+})
+document.getElementById("btn2").addEventListener("click",()=>{
+    pEl.classList.remove("red")
+})
+document.getElementById("btn3").addEventListener("click",()=>{
+    pEl.classList.toggle("blue")
+})
+document.getElementById("btn4").addEventListener("click",()=>{
+    pEl.classList.replace("blue","black")
+})
+        </script>
       </body>
     </html>
   </body>
