--- a/day21/105-module.html
+++ b/day21/105-module.html
@@ -3,12 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Module</title>
 </head>
 <body>
+    <h2 id="lblResult"></h2>
+
+    <button id="btnSort1">Sort Number ASC</button>
+    <button id="btnSort2">Sort Number DESC</button>
+    <button id="btnSort3">Sort String ASC</button>
+    <button id="btnSort4">Sort String DESC</button>
+    <button id="btnSort5">Sort Random</button>
     
-but
 
 
+    <script type="module" src="./js/script-105.js"></script>
+    
 </body>
 </html>
