--- a/day23/115-promise.html
+++ b/day23/115-promise.html
@@ -1,11 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Promise</title>
+    </head>
+    <body>
+        <button id="btnClick">Click</button>
+        <script>
+            const soz1 = () => {
+                return new Promise((resolve) => {
+                    setTimeout(() => {
+                        resolve("1.Söz");
+                    }, 1500);
+                });
+            };
+            const soz2 = () => {
+                return new Promise((resolve) => {
+                    setTimeout(() => {
+                        resolve("2.Söz");
+                    }, 2500);
+                });
+            };
+            const soz3 = () => {
+                return new Promise((resolve) => {
+                    setTimeout(() => {
+                        resolve("3.Söz");
+                    }, 500);
+                });
+            };
+            const soz4 = () => {
+                return new Promise((resolve) => {
+                    setTimeout(() => {
+                        resolve("4.Söz");
+                    }, 900);
+                });
+            };
+            // Bu şekilde hangisi hızlı cevap verirse o önce gelir.
+            soz1().then((data) => console.log(data));
+            soz2().then((data) => console.log(data));
+            soz3().then((data) => console.log(data));
+            soz4().then((data) => console.log(data));
+            // Aşağıdaki şekilde asenkron promise zinciri olur
+            soz1()
+                .then((data) => {
+                    console.log("X->", data);
+                    return soz2();
+                })
+                .then((data) => {
+                    console.log("X->", data);
+                    return soz3();
+                })
+                .then((data) => {
+                    console.log("X->", data);
+                    return soz4();
+                })
+                .then((data) => {
+                    console.log("X->", data);
+                });
+            // Asenkron yapıları senkron gibi çalıştıran yani bekleten await yapısının kullanılması durumu
+            document
+                .getElementById("btnClick")
+                .addEventListener("click", async () => {
+                    const data1 = await soz1();
+                    console.log(data1);
+                    const data2 = await soz2();
+                    console.log(data2);
+                    const data3 = await soz3();
+                    console.log(data3);
+                    const data4 = await soz4();
+                    console.log(data4);
+                });
+        </script>
+    </body>
 </html>
