--- a/fetch02/index.html
+++ b/fetch02/index.html
@@ -1,28 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-			integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-			crossorigin="anonymous"
-		/>
-    <title>Document</title>
-</head>
-<body>
-    
-    <header class="bg-warning p-4 text-center">
-        <h1>User Manager</h1>
-    </header>
-    <div class="container mt-5">
-        <div id="listUser" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-5">
-
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Fetch</title>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+            crossorigin="anonymous"
+        />
+    </head>
+    <body>
+        <header class="bg-warning p-4 text-center">
+            <h1>User Manager</h1>
+        </header>
+        <div class="container my-5">
+            <div class="card my-5">
+                <div class="card-body">
+                    <form id="frmUser">
+                        <div class="row g-3">
+                            <div class="col">
+                                <input
+                                    type="text"
+                                    id="txtFirstName"
+                                    class="form-control"
+                                    placeholder="First name"
+                                />
+                            </div>
+                            <div class="col">
+                                <input
+                                    type="text"
+                                    id="txtLastName"
+                                    class="form-control"
+                                    placeholder="Last name"
+                                />
+                            </div>
+                            <div class="col">
+                                <input
+                                    type="email"
+                                    id="txtEmail"
+                                    class="form-control"
+                                    placeholder="Email"
+                                />
+                            </div>
+                            <div class="col-auto">
+                                <button type="submit" class="btn btn-warning">✔️</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div
+                id="listUser"
+                class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-5"
+            ></div>
         </div>
-    </div>
-
-
-    <script src="./js/script.js" type="module"></script>
-</body>
+        <script src="js/script.js" type="module"></script>
+    </body>
 </html>
